--- a/template_folders/templates/topic/REST API.dita
+++ b/template_folders/templates/topic/REST API.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE apiref PUBLIC "-//GSEJOURNE//ELEMENTS DITA API Reference//EN" "${frameworkDir}/dtd/com.prismadoc.rest-api.dtd">
+<!DOCTYPE apiref PUBLIC "-//GSEJOURNE//DTD DITA DITA REST API Specialization  (hi-d pr-d sw-d ut-d)//EN" "dtd/com.prismadoc.rest-api.dtd">
 <apiref id="apiref_${id}">
   <title></title>
   <shortdesc></shortdesc>
