Update template example for REST API dita topic type, and extend dtd to allow more DITA elements in <descr/> elements

--- a/template_folders/templates/topic/REST API.dita
+++ b/template_folders/templates/topic/REST API.dita
@@ -29,30 +29,18 @@
         <codeblock></codeblock>
       </example>
       <reqbody>
-        <parameters>
+        <fields>
           <field importance="required">
             <parmname></parmname>
             <type format="str"/>
             <descr></descr>
           </field>
-		</parameters>
+    		</fields>
       </reqbody>
     </request>
     <response>
       <http>
         <return>
-          <status>
-            <code></code>
-            <msg></msg>
-            <format></format>
-            <descr></descr>
-          </status>
-          <status>
-            <code></code>
-            <msg></msg>
-            <format></format>
-            <descr></descr>
-          </status>
           <status>
             <code></code>
             <msg></msg>
